Fixed the login/register page inputs being misaligned in safari/chrome

--- a/final_project_workspace/Sculptor/war/bootstrap-3.1.1-dist/css/custom.css
+++ b/final_project_workspace/Sculptor/war/bootstrap-3.1.1-dist/css/custom.css
@@ -148,6 +148,10 @@ padding-top:10px;
 	margin-bottom: 20px;	
 }
 
+.glyphicon {
+	top: 0px;
+}
+
 /* ====== Register page ====== */
 #register-form {
 	width: 500px;
